--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
     <title>Battle City</title>
-    <script type="text/javascript" src="js/prototype.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <script type="text/javascript" src="js/libs/prototype.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/speroteck.css"/>
 </head>
 <body>
     <div id="canvasHolder">
@@ -12,11 +11,5 @@
         <canvas id="layer2" width="800" height="600"></canvas>
         <canvas id="layer3" width="800" height="600"></canvas>
     </div>
-    <script type="text/javascript">
-        var test1 = new Speroteck.TestClass('Hello world');
-        var test2 = new Speroteck.TestClass('Bye world');
-        test1.showName();
-        test2.showName();
-    </script>
 </body>
 </html>
