--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Battle City</title>
     <script type="text/javascript" src="js/libs/prototype.js"></script>
+    <script type="text/javascript" src="js/libs/fabric.js"></script>
+    <script type="text/javascript" src="js/speroteck/artist.js"></script>
     <link rel="stylesheet" type="text/css" href="css/speroteck.css"/>
 </head>
 <body>
@@ -11,5 +13,17 @@
         <canvas id="layer2" width="800" height="600"></canvas>
         <canvas id="layer3" width="800" height="600"></canvas>
     </div>
+    <script type="text/javascript">
+        var artist = new Speroteck.Artist();
+        var canvas1 = new fabric.Canvas('layer1');
+
+        var line = artist.line([ 250, 125, 250, 175 ])
+        line = artist.setColor(line, '#000000', 'stroke');
+        var rectangle = artist.rectangle(50, 50, 50, 80);
+        rectangle = artist.setColor(rectangle, 'red', 'fill');
+        rectangle = artist.setColor(rectangle, 'red', 'stroke');
+
+        canvas1.add(line, rectangle)
+    </script>
 </body>
 </html>
