--- a/index.html
+++ b/index.html
@@ -3,21 +3,32 @@
     <title>Battle City</title>
     <script type="text/javascript" src="js/libs/prototype.js"></script>
     <script type="text/javascript" src="js/libs/fabric.js"></script>
-    <script type="text/javascript" src="js/speroteck/artist.js"></script>
+    <script type="text/javascript" src="js/speroteck/config.js"></script>
+    <script type="text/javascript" src="js/speroteck/image.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/brick.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/grass.js"></script>
+    <script type="text/javascript" src="js/speroteck/grid.js"></script>
     <link rel="stylesheet" type="text/css" href="css/speroteck.css"/>
 </head>
 <body>
 <div id="canvasHolder">
-    <canvas id="layer0" width="800" height="600"></canvas>
-    <canvas id="layer1" width="800" height="600"></canvas>
-    <canvas id="layer2" width="800" height="600"></canvas>
+    <canvas id="layer-0" width="640" height="640"></canvas>
+    <canvas id="layer-1" width="640" height="640"></canvas>
+    <canvas id="layer-2" width="640" height="640"></canvas>
 </div>
+<img src="images/32/brick.png" id="speroteck-image-brick" style="display: none">
+<img src="images/32/grass.gif" id="speroteck-image-grass" style="display: none">
 <script type="text/javascript">
-    var canvas0 = new fabric.Canvas('layer0');
+    var canvas0 = new fabric.StaticCanvas('layer-0', {
+    });
+    var canvas1 = new fabric.StaticCanvas('layer-1', {
+        backgroundColor: 'rgb(0,0,0)'
+    });
+    var canvas2 = new fabric.StaticCanvas('layer-2', {
+    });
 
-    var artist = new Speroteck.Artist({'fabric': fabric, 'canvas': canvas0});
-    artist.line([0, 0, 400, 400]);
-
+    var grid = new Speroteck.Grid({'canvases': [canvas0, canvas1, canvas2]});
 </script>
 </body>
 </html>
