--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
     <title>Battle City</title>
     <script type="text/javascript" src="js/libs/prototype.js"></script>
     <script type="text/javascript" src="js/libs/fabric.js"></script>
-    <script type="text/javascript" src="js/speroteck/config.js"></script>
+    <script type="text/javascript" src="js/speroteck/game.js"></script>
+    <script type="text/javascript" src="js/speroteck/game/config.js"></script>
     <script type="text/javascript" src="js/speroteck/image.js"></script>
+    <script type="text/javascript" src="js/speroteck/object.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/brick.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/grass.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/water.js"></script>
-    <script type="text/javascript" src="js/speroteck/grid.js"></script>
+    <script type="text/javascript" src="js/speroteck/tank.js"></script>
+    <script type="text/javascript" src="js/speroteck/tank/m1.js"></script>
+    <script type="text/javascript" src="js/speroteck/tank/m2.js"></script>
+    <script type="text/javascript" src="js/speroteck/tank/m3.js"></script>
+    <script type="text/javascript" src="js/speroteck/tank/m4.js"></script>
+    <script type="text/javascript" src="js/speroteck/tank/m5.js"></script>
+
+    <script type="text/javascript" src="js/speroteck/game/grid.js"></script>
+    <script type="text/javascript" src="js/speroteck/game/player.js"></script>
     <link rel="stylesheet" type="text/css" href="css/speroteck.css"/>
 </head>
 <body>
@@ -21,21 +31,28 @@
 <img src="images/32/brick.png" id="speroteck-image-brick" style="display: none">
 <img src="images/32/grass.gif" id="speroteck-image-grass" style="display: none">
 <img src="images/32/water.png" id="speroteck-image-water" style="display: none">
+<img src="images/32/player.png" id="speroteck-image-player" style="display: none">
+<img src="images/32/enemy-1.png" id="speroteck-image-enemy-1" style="display: none">
+<img src="images/32/enemy-2.png" id="speroteck-image-enemy-2" style="display: none">
+<img src="images/32/enemy-3.png" id="speroteck-image-enemy-3" style="display: none">
+<img src="images/32/enemy-4.png" id="speroteck-image-enemy-4" style="display: none">
 <script type="text/javascript">
-    var canvas0 = new fabric.StaticCanvas('layer-0', {
-        backgroundColor: 'rgb(0,0,0)'
-    });
-    var canvas1 = new fabric.StaticCanvas('layer-1', {
+        var canvas0 = new fabric.StaticCanvas('layer-0', {
+            backgroundColor: 'rgb(0,0,0)'
+        });
+        var canvas1 = new fabric.StaticCanvas('layer-1', {
 
-    });
-    var canvas2 = new fabric.StaticCanvas('layer-2', {
-    });
+        });
+        var canvas2 = new fabric.StaticCanvas('layer-2', {
+        });
 
-    var grid = new Speroteck.Grid({
-        'canvases': [canvas0, canvas1, canvas2],
-        'levelUrl': 'http://battle-city.dev/index.php',//here has to be an url to your local web-server
-        'level': 0
-    });
+        grid = new Speroteck.Game.Grid({
+            'canvases': [canvas0, canvas1, canvas2],
+            'levelUrl': 'http://battle-city.dev/index.php',//here has to be an url to your local web-server
+            'level': 0
+        });
+
+
 </script>
 </body>
 </html>
