--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Battle City</title>
     <script type="text/javascript" src="js/libs/prototype.js"></script>
     <script type="text/javascript" src="js/libs/fabric.js"></script>
+    <script type="text/javascript" src="js/libs/events.js"></script>
     <script type="text/javascript" src="js/speroteck/game.js"></script>
     <script type="text/javascript" src="js/speroteck/game/config.js"></script>
     <script type="text/javascript" src="js/speroteck/image.js"></script>
@@ -17,9 +18,9 @@
     <script type="text/javascript" src="js/speroteck/tank/m3.js"></script>
     <script type="text/javascript" src="js/speroteck/tank/m4.js"></script>
     <script type="text/javascript" src="js/speroteck/tank/m5.js"></script>
-
-    <script type="text/javascript" src="js/speroteck/game/grid.js"></script>
+    <script type="text/javascript" src="js/speroteck/game/board.js"></script>
     <script type="text/javascript" src="js/speroteck/game/player.js"></script>
+    <script type="text/javascript" src="js/speroteck/game/master.js"></script>
     <link rel="stylesheet" type="text/css" href="css/speroteck.css"/>
 </head>
 <body>
@@ -46,13 +47,11 @@
         var canvas2 = new fabric.StaticCanvas('layer-2', {
         });
 
-        grid = new Speroteck.Game.Grid({
+        board = new Speroteck.Game.Board({
             'canvases': [canvas0, canvas1, canvas2],
             'levelUrl': 'http://battle-city.dev/index.php',//here has to be an url to your local web-server
             'level': 0
         });
-
-
 </script>
 </body>
 </html>
