--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="js/libs/events.js"></script>
     <script type="text/javascript" src="js/speroteck/game.js"></script>
     <script type="text/javascript" src="js/speroteck/game/config.js"></script>
+    <script type="text/javascript" src="js/speroteck/game/math.js"></script>
     <script type="text/javascript" src="js/speroteck/image.js"></script>
     <script type="text/javascript" src="js/speroteck/object.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle.js"></script>
@@ -20,6 +21,7 @@
     <script type="text/javascript" src="js/speroteck/tank/m5.js"></script>
     <script type="text/javascript" src="js/speroteck/game/board.js"></script>
     <script type="text/javascript" src="js/speroteck/game/player.js"></script>
+    <script type="text/javascript" src="js/speroteck/game/ai.js"></script>
     <script type="text/javascript" src="js/speroteck/game/master.js"></script>
     <link rel="stylesheet" type="text/css" href="css/speroteck.css"/>
 </head>
