--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="js/libs/prototype.js"></script>
     <script type="text/javascript" src="js/libs/fabric.js"></script>
     <script type="text/javascript" src="js/libs/events.js"></script>
+    <script type="text/javascript" src="js/libs/loose.quad.tree.js"></script>
     <script type="text/javascript" src="js/speroteck/game.js"></script>
     <script type="text/javascript" src="js/speroteck/game/config.js"></script>
     <script type="text/javascript" src="js/speroteck/game/math.js"></script>
