--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/speroteck/obstacle/brick.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/grass.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/water.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/concrete.js"></script>
     <script type="text/javascript" src="js/speroteck/tank.js"></script>
     <script type="text/javascript" src="js/speroteck/tank/m1.js"></script>
     <script type="text/javascript" src="js/speroteck/tank/m2.js"></script>
@@ -33,6 +34,7 @@
     <canvas id="layer-2" width="640" height="640"></canvas>
 </div>
 <img src="images/32/brick.png" id="speroteck-image-brick" style="display: none">
+<img src="images/32/concrete.png" id="speroteck-image-concrete" style="display: none">
 <img src="images/32/grass.gif" id="speroteck-image-grass" style="display: none">
 <img src="images/32/water.png" id="speroteck-image-water" style="display: none">
 <img src="images/32/player.png" id="speroteck-image-player" style="display: none">
@@ -52,7 +54,7 @@
 
         board = new Speroteck.Game.Board({
             'canvases': [canvas0, canvas1, canvas2],
-            'levelUrl': 'http://battle-city.dev/index.php',//here has to be an url to your local web-server
+            'levelUrl': 'http://tanki.dev/index.php',//here has to be an url to your local web-server
             'level': 0
         });
 </script>
