--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="js/speroteck/obstacle/grass.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/water.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/concrete.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/home.js"></script>
     <script type="text/javascript" src="js/speroteck/tank.js"></script>
     <script type="text/javascript" src="js/speroteck/tank/m1.js"></script>
     <script type="text/javascript" src="js/speroteck/tank/m2.js"></script>
@@ -37,6 +38,7 @@
 <img src="images/32/concrete.png" id="speroteck-image-concrete" style="display: none">
 <img src="images/32/grass.gif" id="speroteck-image-grass" style="display: none">
 <img src="images/32/water.png" id="speroteck-image-water" style="display: none">
+<img src="images/32/home.png" id="speroteck-image-home" style="display: none">
 <img src="images/32/player.png" id="speroteck-image-player" style="display: none">
 <img src="images/32/enemy-1.png" id="speroteck-image-enemy-1" style="display: none">
 <img src="images/32/enemy-2.png" id="speroteck-image-enemy-2" style="display: none">
