--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <script type="text/javascript" src="js/speroteck/obstacle/grass.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/water.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/concrete.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/concrete/right.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/concrete/left.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/concrete/up.js"></script>
+    <script type="text/javascript" src="js/speroteck/obstacle/concrete/down.js"></script>
     <script type="text/javascript" src="js/speroteck/obstacle/home.js"></script>
     <script type="text/javascript" src="js/speroteck/tank.js"></script>
     <script type="text/javascript" src="js/speroteck/tank/m1.js"></script>
@@ -36,6 +40,10 @@
 </div>
 <img src="images/32/brick.png" id="speroteck-image-brick" style="display: none">
 <img src="images/32/concrete.png" id="speroteck-image-concrete" style="display: none">
+<img src="images/32/concrete-up.png" id="speroteck-image-concrete-up" style="display: none">
+<img src="images/32/concrete-down.png" id="speroteck-image-concrete-down" style="display: none">
+<img src="images/32/concrete-left.png" id="speroteck-image-concrete-left" style="display: none">
+<img src="images/32/concrete-right.png" id="speroteck-image-concrete-right" style="display: none">
 <img src="images/32/grass.gif" id="speroteck-image-grass" style="display: none">
 <img src="images/32/water.png" id="speroteck-image-water" style="display: none">
 <img src="images/32/home.png" id="speroteck-image-home" style="display: none">
